        PR c++/34824         * call.c (convert_like_real): Pass LOOKUP_ONLYCONVERTING to build_temp         if we're doing conversions to call a user-defined conversion function.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132282 138bc75d-0d04-0410-961f-82ee72b054a4